--- a/partials/settings.html
+++ b/partials/settings.html
@@ -46,5 +46,5 @@
             </tr>
         </tbody>
     </table>
-    <a href="/password.html">Change Password</a>
+    <a class="btn btn-large btn-block btn-primary btn-warning" href="/password.html">Change Password</a>
 </div>
